surf-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfreporter
  namespace: surfreporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: surfreporter
  template:
    metadata:
      labels:
        app: surfreproter
    spec:
      containers:
        - name: surfreporter
          image: cascade1080/noaa-exporter:latest
          ports:
            - containerPort: 8000
