surf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surfreporter-svc
  namespace: surfreporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  selector:
    app: surfreporter
  ports:
    - port: 8000
      targetPort: 8000
