surf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noaa-exporter-ingress
  namespace: surfreporter
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: surfreporter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: surfreporter
                port:
                  number: 8000
