surf-reporter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surfreporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfreporter-deploy
  namespace: surfreporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: surfreporter
  template:
    metadata:
      labels:
        app: surfreporter
    spec:
      containers:
        - name: surfreporter
          image: cascade1080/noaa-exporter:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: surfreporter-svc
  namespace: surfreporter
spec:
  selector:
    app: surfreporter
  ports:
    - port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surfreporter-ingress
  namespace: surfreporter
spec:
  ingressClassName: traefik
  rules:
    - host: surfreporter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: surfreporter-svc
                port:
                  number: 8000
